# redb-extras

./: AGENTS.md  Cargo.toml  README.md  example.redb
examples/: basic_usage.rs  bucket_multimap.rs  table_bucket_multimap.rs
src/: error.rs  lib.rs
src/buckets/: iterator.rs  key.rs  mod.rs
src/dbcopy/: mod.rs  tests.rs
src/encoding/: key.rs  mod.rs
src/key_buckets/: iterator.rs  key.rs  mod.rs
src/partition/: config.rs  mod.rs  scan.rs  shard.rs  table.rs  traits.rs
src/roaring/: facade.rs  mod.rs  traits.rs  value.rs
src/table_buckets/: iterator.rs  mod.rs
tests/: roaring_table_operations.rs
