[package]
name = "redb-extras"
version = "0.5.0"
edition = "2021"
rust-version = "1.70"
description = "Use-case agnostic utilities for redb, featuring sharded roaring bitmap tables"
license = "Apache-2.0"
authors = ["Santiago Carmuega <santiago@carmuega.me>"]
repository = "https://github.com/scarmuega/redb-extras"
homepage = "https://github.com/scarmuega/redb-extras"
documentation = "https://docs.rs/redb-extras"
keywords = ["redb", "roaring", "bitmap", "database", "storage"]
categories = ["database", "data-structures", "algorithms"]
readme = "README.md"

[dependencies]
redb = "3.1"
roaring = "0.10"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.0"
